--- a/GYM/style.css
+++ b/GYM/style.css
@@ -1,97 +1,141 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+:root{
+    --azul:#134074;
+    --rosa:#eb7b47;
+    --coral:#de5617;
+    --negro:rgba(0, 0, 0, 0.869);
+    --fuente:'Quicksand', sans-serif;
+}
+html{
+    box-sizing:content-box;
+}
+.center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: cornflowerblue;
+    padding: 20px;
+    width: 100ch;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+body{
+    font-family: var(--fuente);
+    background-color: var(--rosa);
+    display: flex;
+    align-items: left;
+    --coral:#eb7b47;
+    margin-left: 6cm;
+    margin-top: 1cm;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.contenedor-formulario contenedor{
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 100%;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.imagen-formulario{
+    background-position: left ;
+    height: 100vh;
+    width: auto;
+    position:relative;
+    
+}
+.imagen-formulario::before{
+   content: '';
+   position: absolute;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 100px;
+
+   
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
+@media(min-width:768px){
+    .imagen-formulario{
+        height: auto;
+        background-position: left;
+    }
+
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+@media(min-width:1200px){
+    .imagen-formulario{
+        background-position: left;
+    }
 }
 
-.card {
-  padding: 2em;
+@media(min-width:768px){
+    .contenedor-formulario{
+        display: flex;
+    }
 }
 
-.read-the-docs {
-  color: #888;
+.formulario{
+    padding: 40px;
+    background-color: #fbfff1;
+}
+.texto-formulario h2,  .texto-formulario p{
+    color: var(--negro);
+    align-items: center;
+}
+.texto-formulario h2{
+    font-size: 30px;
+   
+}
+.texto-formulario p{
+    font-size: 22px;
+    text-align: center;
+}
+.input label{
+    display: block;
+    font-size: 22px;
+    font-weight: bold;
+    margin: 20px }
+
+.input input {
+    width: 90%;
+    padding: 10px 16px;
+    border-radius: 5px;
+    border-color: #eb7b47;
+    outline: none;
+    margin-right: 2px;
+}
+.input input[type="submit"]{
+    background-color: var(--coral);
+    color: var(--negro);
+    font-size: 22px;
+    font-weight: bold;
+    border: none;
+    margin-top: 20px;
+    padding: 15px;
+    text-align: center;
+    transition: background-color .3s ease-in-out;
+}
+.input input[type="submit"]:hover{
+    cursor: pointer;
+    background-color: #eb7b47;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.input a {
+    width: 100%;
+    padding: 10px 16px;
+    border-radius: 5px;
+    border-color: #eb7b47;
+    outline: none;
+    margin-right: 2px;
 }
-button:hover {
-  border-color: #646cff;
+.input a[class="ingresar"]{
+    background-color: var(--coral);
+    color: var(--negro);
+    font-size: 22px;
+    font-weight: bold;
+    border: none;
+    margin-top: 20px;
+    padding: 15px;
+    text-align: center;
+    transition: background-color .3s ease-in-out;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.input a[class="ingresar"]:hover{
+    cursor: pointer;
+    background-color: #eb7b47;
 }
